--- a/app/src/main/res/layout/activity_ecuacion_segundo_grado_manifest.xml
+++ b/app/src/main/res/layout/activity_ecuacion_segundo_grado_manifest.xml
@@ -56,8 +56,7 @@
                 android:layout_width="10dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:ems="10"
-                android:inputType="textPersonName" />
+                android:inputType="number"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -75,8 +74,7 @@
                 android:layout_width="10dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:ems="10"
-                android:inputType="textPersonName" />
+                android:inputType="number" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -94,8 +92,7 @@
                 android:layout_width="10dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:ems="10"
-                android:inputType="textPersonName" />
+                android:inputType="number" />
         </LinearLayout>
     </GridLayout>
     <LinearLayout
@@ -153,5 +150,4 @@
             android:layout_weight="1"
             android:text="atras" />
     </LinearLayout>
-
 </LinearLayout>
